# OpenGL-Work

./: CMakeLists.txt  README.md
BeachScene/assets/: fragmentShader.frag  grassFragmentShader.frag  grassVertexShader.vert  lit_fragmentShader.frag  oceanFragment.frag  oceanVertex.vert  skyboxVertex.vert
assignments/assignment1_helloTriangle/: CMakeLists.txt  main.cpp
assignments/assignment1_helloTriangle/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment2_indicesTexturing/: CMakeLists.txt  main.cpp
assignments/assignment2_indicesTexturing/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_texturesBlending/: CMakeLists.txt  main.cpp
assignments/assignment3_texturesBlending/assets/: Ass3_Background.aseprite  Ass3_Sprite.aseprite  fragmentShader.frag  spriteShader.frag  vertexShader.vert
assignments/assignment4_3dTransformations/: CMakeLists.txt  main.cpp
assignments/assignment4_3dTransformations/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment5_lighting/: CMakeLists.txt  main.cpp
assignments/assignment5_lighting/assets/: lit_fragmentShader.frag  vertexShader.vert
assignments/assignment7_final/: CMakeLists.txt  Ocean.shadergraph  imgui.ini  main.cpp
assignments/assignment7_final/assets/: vertexShader.vert
assignments/assignment7_final/assets/mustang/: Mustang.mtl
core/: CMakeLists.txt
core/ew/ewMath/: ewMath.h
core/rafa/: camera.cpp  camera.h  header.h  shader.cpp  shader.h  texture.cpp  texture.h  vertices.cpp  vertices.h
